tests/baselines/reference/variableDeclarationInStrictMode1.errors.txt
tests/cases/compiler/variableDeclarationInStrictMode1.ts(2,5): error TS1100: Invalid use of 'eval' in strict mode.
lib.d.ts(29,18): error TS2300: Duplicate identifier 'eval'.
tests/cases/compiler/variableDeclarationInStrictMode1.ts(2,5): error TS2300: Duplicate identifier 'eval'.


==== tests/cases/compiler/variableDeclarationInStrictMode1.ts (2 errors) ====
    "use strict";
    var eval;
        ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
        ~~~~
!!! error TS2300: Duplicate identifier 'eval'.